--- a/static/index.html
+++ b/static/index.html
@@ -55,10 +55,10 @@
             </div>
 
             <div class="controls">
-                <button id="new-game" class="btn shine">Neues Spiel</button>
+                <button id="new-game" class="btn action-btn new-game">Neues Spiel</button>
                 <button id="place-bet" class="btn shine">Einsatz platzieren</button>
-                <button id="hit" class="btn shine" disabled>Hit</button>
-                <button id="stand" class="btn shine" disabled>Stand</button>
+                <button id="hit" class="btn action-btn hit" disabled>Hit</button>
+                <button id="stand" class="btn action-btn stand" disabled>Stand</button>
                 <button id="reset" class="btn shine reset-btn" style="display: none;">Neues Guthaben ($1000)</button>
             </div>
         </div>
