--- a/static/index.html
+++ b/static/index.html
@@ -59,7 +59,7 @@
                 <button id="place-bet" class="btn action-btn place-bet">Einsatz platzieren</button>
                 <button id="hit" class="btn action-btn hit" disabled>Hit</button>
                 <button id="stand" class="btn action-btn stand" disabled>Stand</button>
-                <button id="reset" class="btn action-btn reset-btn">Neues Guthaben ($1000)</button>
+                <button id="reset" class="btn action-btn reset-btn" style="display: none;">Neues Guthaben ($1000)</button>
             </div>
         </div>
     </div>
