--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="player-area">
-                <h2>Ihre Hand <span id="player-score"></span></h2>
+                <h2>Your hand <span id="player-score"></span></h2>
                 <div id="player-cards" class="cards"></div>
             </div>
 
